# buildarr-docs

./: .gitmodules  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  main.yml  mkdocs.yml  pre-commit.yml  publish.yml  pull_request.yml
docs/: configuration.md  index.md  installation.md  release-notes.md  usage.md
docs/docker/: release-notes.md
docs/installation/: docker.md  python.md  windows.md
docs/installer/: release-notes.md
docs/plugins/: index.md  jellyseerr  prowlarr  radarr  sonarr
docs/release-notes/: buildarr-docker.md  buildarr-prowlarr.md  buildarr-sonarr.md  buildarr.md
scripts/: poetry-export.sh
