# pyproject.toml
# Python project configuration.

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "buildarr-docs"
version = "1.0.0"
description = "Documentation build environment for Buildarr"
authors = ["Callum Dickinson <callum.dickinson.nz@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://buildarr.github.io"
repository = "https://github.com/buildarr/buildarr-docs"
documentation = "https://buildarr.github.io"
keywords = ["buildarr", "sonarr"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
mkdocs = "1.4.2"
mkdocstrings = {extras = ["python"], version = "0.21.2"}
buildarr = {path = "externals/buildarr"}
buildarr-sonarr = {path = "externals/buildarr-sonarr"}
buildarr-prowlarr = {path = "externals/buildarr-prowlarr"}
